@@ -1,3 +1,8 @@
+2004-10-29  Keisuke Nishida  <knishida@open-cobol.org>
+
+	* typeck.c (cb_build_length_1): New function.
+	(cb_build_length): Create an anonymous index and use it for length.
+
 2004-09-28  Keisuke Nishida  <knishida@open-cobol.org>
 
 	* typeck.c (cb_build_move_field): Compare flag_binary_swap for
